--- a/baggage/templates/baggage_add.html
+++ b/baggage/templates/baggage_add.html
@@ -52,35 +52,40 @@
 	    <label class="control-label" for="bag_description">Description</label>
 	    <textarea rows="4" cols="50" class="form-control" name="bag_description"></textarea>
 	</div>
-	<div class="form-group">
-	    <input type="checkbox" name="bag_special" id="holita" value="special"> Special
+	<div class="form-group" id="baggage-sel-special" style="margin-bottom: 5px;">
+	    <input type="checkbox" name="bag_special" id="pos_special" value="special"> Special
 	</div>
-	{% if rooms|length > 0 %}
-	    <div class="form-group">
-		<label class="control-label" for="pos_room">Room</label>
-		<select class="form-control" id="baggage-rooms" name="pos_room">
-		{% for room in rooms %}
-		    <option value="{{ room.room }}">{{ room.room }}</option>
-		{% endfor %}
-		</select>
-	    </div>
-	    <div class="form-group">
-		<label class="control-label" for="pos_row">Row</label>
-		<select class="form-control" id="baggage-rows" name="pos_row">
-		{% for i in "x"|ljust:rooms.0.row %}
-		    <option value="{{ forloop.counter0|itoa }}" {% if forloop.counter0 == 0 %} selected {% endif %}>{{ forloop.counter0|itoa }}</option>
-		{% endfor %}
-		</select>
-	    </div>
-	    <div class="form-group">
-		<label class="control-label" for="pos_col">Column</label>
-		<select class="form-control" id="baggage-cols" name="pos_col">
-		{% for i in "x"|ljust:rooms.0.col %}
-		    <option value="{{ forloop.counter0 }}" {% if forloop.counter0 == 0 %} selected {% endif %}>{{ forloop.counter0 }}</option>
-		{% endfor %}
-		</select>
-	    </div>
-	{% endif %}
+	<div class="form-group" id="baggage-sel-manual">
+	    <input type="checkbox" name="pos_manual" id="pos_manual" value="manual"> Manual position
+	</div>
+	<div id="baggage-manual" style="display: none;">
+	    {% if rooms|length > 0 %}
+		<div class="form-group">
+		    <label class="control-label" for="pos_room">Room</label>
+		    <select class="form-control" id="baggage-rooms" name="pos_room">
+		    {% for room in rooms %}
+			<option value="{{ room.room }}">{{ room.room }}</option>
+		    {% endfor %}
+		    </select>
+		</div>
+		<div class="form-group">
+		    <label class="control-label" for="pos_row">Row</label>
+		    <select class="form-control" id="baggage-rows" name="pos_row">
+		    {% for i in "x"|ljust:rooms.0.row %}
+			<option value="{{ forloop.counter0|itoa }}" {% if forloop.counter0 == 0 %} selected {% endif %}>{{ forloop.counter0|itoa }}</option>
+		    {% endfor %}
+		    </select>
+		</div>
+		<div class="form-group">
+		    <label class="control-label" for="pos_col">Column</label>
+		    <select class="form-control" id="baggage-cols" name="pos_col">
+		    {% for i in "x"|ljust:rooms.0.col %}
+			<option value="{{ forloop.counter0 }}" {% if forloop.counter0 == 0 %} selected {% endif %}>{{ forloop.counter0 }}</option>
+		    {% endfor %}
+		    </select>
+		</div>
+	    {% endif %}
+	</div>
         <input type="hidden" name="user_id" value="{{ user.id }}"/>
 	<button class="btn btn-success" name="checkin">Bag check-in</button>
     </form>
@@ -104,6 +109,31 @@
 		    cols.innerHTML = cols_room
 	        }
 	    {% endfor %}
+	});
+	
+	var special = document.getElementById("pos_special");
+	special.addEventListener("change", function(){
+	    if(special.checked == true){
+		document.getElementById("baggage-manual").style.display = "none"
+		document.getElementById("baggage-sel-manual").style.display = "none"
+		document.getElementById("baggage-sel-special").style.marginBottom = "15px"
+	    }
+	    else{
+		document.getElementById("pos_manual").checked = false
+		document.getElementById("baggage-manual").style.display = "none"
+		document.getElementById("baggage-sel-manual").style.display = "block"
+		document.getElementById("baggage-sel-special").style.marginBottom = "5px"
+	    }
+	});
+	
+	var manual = document.getElementById("pos_manual");
+	manual.addEventListener("change", function(){
+	    if(manual.checked == true){
+		document.getElementById("baggage-manual").style.display = "block"
+	    }
+	    else{
+		document.getElementById("baggage-manual").style.display = "none"
+	    }
 	});
     </script>
 {% endblock %}
