--- a/baggage/templates/baggage_history.html
+++ b/baggage/templates/baggage_history.html
@@ -14,7 +14,9 @@
 		<th>Owner</th>
 		<th>Status</th>
 		<th>Time added</th>
+		<th>Added by</th>
 		<th>Time removed</th>
+		<th>Removed by</th>
 	    </tr>
         </thead>
         <tbody>
@@ -24,9 +26,12 @@
 			<td>{{ bag.owner }}</td>
 			<td>{{ bag.get_status_display }}</td>
 			<td>{{ bag.time|date:"d/m/Y" }} {{ bag.time|time:"H:i:s" }}</td>
+			<td>{{ bag.inby }}</td>
 			{% if bag.status == "R" %}
 				<td>{{ bag.updated|date:"d/m/Y" }} {{ bag.updated|time:"H:i:s" }}</td>
+				<td>{{ bag.outby }}</td>
 			{% else %}
+				<td></td>
 				<td></td>
 			{% endif %}
 		</tr>
