--- a/meals/templates/include/meals_tab.html
+++ b/meals/templates/include/meals_tab.html
@@ -1,3 +1,3 @@
 {% if request.user.is_organizer %}
-    <li><a href="{% url 'meals_list' %}">Meals</a></li>
+    <li><a href="{% url 'meals_list' %}" class="{% if 'meals' in request.build_absolute_uri %}active{% endif %}">Meals</a></li>
 {% endif %}
