--- a/baggage/templates/include/baggage_tab.html
+++ b/baggage/templates/include/baggage_tab.html
@@ -1,3 +1,3 @@
 {% if request.user.is_volunteer or request.user.is_organizer %}
-    <li><a href="{% url 'baggage_search' %}">Baggage</a></li>
+    <li><a href="{% url 'baggage_search' %}" class="{% if 'meals' in request.build_absolute_uri %}active{% endif %}">Baggage</a></li>
 {% endif %}
