Fixed header on history table

--- a/baggage/templates/baggage_history.html
+++ b/baggage/templates/baggage_history.html
@@ -8,7 +8,7 @@
 
 {% block panel %}
     <table class="table table-hover">
-        <thread>
+        <thead>
 	    <tr>
 		<th>Id</th>
 		<th>Owner</th>
