Add info text for image on baggage check-in

--- a/baggage/templates/baggage_add.html
+++ b/baggage/templates/baggage_add.html
@@ -48,6 +48,7 @@
 	{% if h_b_picture %}
 	    <div class="form-group">
 	        <label class="control-label" for="baggage-scan-image">Image</label>
+	        <p class="image-info"><i class="fa fa-info-circle"></i> Picture will be taken automatically on check-in.</p>
 	        <div id="baggage-scan-image"></div>
 	        <input type="hidden" class="form-control" id="baggage-scan-file" name="bag_image" />
 	    </div>
