--- a/checkin/templates/checkin/hacker.html
+++ b/checkin/templates/checkin/hacker.html
@@ -36,11 +36,7 @@
             <form action="" method="post" style="padding-top: 1.5em;">
                 {% csrf_token %}
 		<div class="form-group">
-		      <button type="button" id="assign-qr" class="btn btn-info">Read wristband QR</button>
-		</div>
-		<div class="form-group">
-		    <label class="control-label" for="qr_code">QR code</label>
-		    <input type="text" id="qr_code" class="form-control" name="qr_code" />
+		    {% include 'include/input.html' with type='qr' desc='QR code' name='qr_code' id='qr_code' %}
 		</div>
                 <input type="hidden" name="app_id" value="{{ app.uuid }}"/>
                 <button class="btn btn-success btn-block" name="checkin">Check In</button>
