--- a/meals/templates/meal_detail.html
+++ b/meals/templates/meal_detail.html
@@ -25,7 +25,7 @@
 	    <input type="text" class="form-control" name="meal_ends" value="{{ ends }}" />
 	</div>
 	<div class="form-group">
-	    <label class="control-label" for="meal_times">Times</label>
+	    <label class="control-label" for="meal_times">Times a hacker can eat</label>
 	    <input type="number" class="form-control" name="meal_times" value="{{ meal.times }}" step="1" min="1" />
 	</div>
         <input type="hidden" name="meal_id" value="{{ meal.id }}"/>
