--- a/meals/templates/meals_list.html
+++ b/meals/templates/meals_list.html
@@ -1,16 +1,13 @@
 {% extends "base_table.html" %}
 
-{% load static %}
-{% load bootstrap3 %}
 
 {% block head_title %}Meals list{% endblock %}
 
-{% block extra_panel %}
-
-{% endblock %}
 
 {% block table_footer %}
+    {%  if user.is_organizer %}
     <div class="panel-footer">
-	<a href="{% url 'meal_add' %}" class="btn btn-success btn-block">Add new meal</a>
+	    <a href="{% url 'meal_add' %}" class="btn btn-success btn-block">Add new meal</a>
     </div>
+    {% endif %}
 {% endblock %}
