fix name consistency

--- a/judging/templates/room_judging.html
+++ b/judging/templates/room_judging.html
@@ -6,7 +6,7 @@
 {% load form_utils %}
 {% block head_title %}Judge projects{% endblock %}
 {% block extra_head %}
-      <link rel="stylesheet" href="{% static 'css/presentations.css' %}">
+      <link rel="stylesheet" href="{% static 'css/judging.css' %}">
 {% endblock %}
 {% block panel %}
 
