--- a/judging/static/css/presentations.css
+++ b/judging/static/css/presentations.css
@@ -1,3 +1,75 @@
-.criteria {
-    margin-bottom: 14px;
+.content-container{
+	width:80%;
+}
+
+.content-inside{
+	display:flex;
+	flex-wrap:wrap;
+	justify-content: center;
+}
+
+.content-inside > div{
+	position:relative;
+	padding: 5px 25px;
+	background-color:white;
+	width:300px;
+	margin:15px;
+}
+
+.content-inside > div > h1{
+	margin: 10px 0 0 0;
+}
+
+.content-inside > div > h2{
+	margin: 0 0 10px 0;	
+	font-size:24px;
+	color:#aaa;
+}
+
+.content-inside > div > div{
+	font-size:20px;
+}
+
+.content-inside > div span{
+	font-weight: bold;
+}
+
+.content-inside > div ol li:nth-child(1){
+	font-size:20px;
+	list-style:none;
+}
+
+.content-inside > div ol li:nth-child(1)::before{
+	content:'Current: ';
+	font-size:20px;
+	font-weight: bold;
+}
+
+.content-inside > div ol li:nth-child(2){
+	font-size:18px;
+	list-style:none;
+}
+
+.content-inside > div ol li:nth-child(2)::before{
+	content:'Next: ';
+	font-size:18px;
+	font-weight: bold;
+}
+
+.content-inside > div ol li{
+	overflow: hidden;
+	text-overflow: ellipsis;
+	list-style:decimal;
+	list-style-position:inside;
+}
+
+.judging-close-button{
+	position:absolute;
+	right:15px;
+	cursor:pointer;
+}
+
+.content-inside > div.empty > h1{
+	padding:15px 5px;
+	margin:0;
 }
