--- a/judging/templates/rooms_presentations.html
+++ b/judging/templates/rooms_presentations.html
@@ -1,7 +1,7 @@
 {% extends "base_tabs.html" %}
 {% load static %}
 {% block extra_head %}
-	<link rel="stylesheet" href="{% static 'css/judging.css' %}">
+	<link rel="stylesheet" href="{% static 'css/presentations.css' %}">
 	<script>
 		document.addEventListener("DOMContentLoaded", ()=>{
 			let btns = document.getElementsByClassName("judging-close-button")
