add auto-reload on queue view

--- a/judging/templates/rooms_presentations.html
+++ b/judging/templates/rooms_presentations.html
@@ -12,6 +12,11 @@
 				})
 			}
 		})
+
+		//TODO: get data via ajax and update the view
+		setTimeout(function(){
+			location.reload()
+		}, 10000)
 	</script>
 {% endblock %}
 {% block body %}
