Fix JS redirect on hacker template

--- a/checkin/templates/checkin/hacker.html
+++ b/checkin/templates/checkin/hacker.html
@@ -6,7 +6,7 @@
 {% block extra_head %}
     <link rel="stylesheet" href="{% static 'css/checkin.css' %}">
     <script src="{% static 'lib/instascan.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/checkin.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/checkin_add.js' %}"></script>
 {% endblock %}
 
 {% block head_title %}Check-in {{ app.user.name }}{% endblock %}
