--- a/meals/static/css/meals.css
+++ b/meals/static/css/meals.css
@@ -1,67 +1,5 @@
-.button-qr {
-    vertical-align: middle;
-    padding: 5px 7px 3px;
-    border: thin solid #ddd;
-    cursor: pointer;
-    float: left;
-    font-size: 24px;
-    border-radius: 4px;
-}
 
-.button-qr-success {
-    color: #3c763d;
-    border-color: #3c763d;
-}
-
-.input-qr {
-    display: block;
-    overflow: hidden;
-    padding-left: 10px;
-}
-
-.meals-popup-scan {
-    position: absolute;
-    top: 50px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 90%;
-    max-width: 600px;
-    padding: 15px;
-    border: 3px solid #333;
-    text-align: center;
-    z-index: 1032;
-    background-color: white;
-}
-
-.meals-popup-scan select {
-    margin-bottom: 15px;
-}
-
-.meals-popup-scan video {
+body{
+    height: 100vh;
     width: 100%;
-    margin: 0 auto;
-}
-
-.meals-inside-scan {
-    width: 100%;
-}
-
-.meals-inside-scan select {
-    margin-bottom: 15px;
-}
-
-.meals-inside-scan video {
-    width: 100%;
-    margin: 0 auto;
-}
-
-.veil {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1031;
-    background-color: rgba(30,30,30,0.9);
-    cursor: pointer;
 }
