--- a/meals/templates/meal_checkin.html
+++ b/meals/templates/meal_checkin.html
@@ -18,10 +18,11 @@
 {% block head_title %}Check-in meal {{meal.name}}{% endblock %}
 
 {% block body_plain %}
-    <div id="meals-scan-image" class="meals-inside-scan" style="height: 100%; width: 100%;" data-mealid="{{ meal.id }}"
+    <a class="btn btn-block" href="{% url 'meals_list' %}">< Back</a>
+    <div id="meals-scan-image" class="meals-inside-scan" style="max-width: 100%;max-height: 100%;" data-mealid="{{ meal.id }}"
     data-apiurl="{% url 'cool_meals_api' %}">
         <select class="form-control"></select>
-        <video id="meals-scan-video" style="height: 100%; width: 100%;">   </video>
+        <video id="meals-scan-video" style="width: 100%; max-height: 80%; margin:0 auto;">   </video>
     </div>
 {% endblock %}
 
