Add enable/disable option for meal

--- a/meals/templates/meal_checkin.html
+++ b/meals/templates/meal_checkin.html
@@ -17,7 +17,7 @@
         <div class="alert alert-success">
             <p>
                 Great job! Successfully scanned hacker for {{ meal.name }}!  <br>
-                <strong>{% if diet %}Dietary restriction: {{ diet }}{% else %}No dietary restriction.{% endif %}</strong>
+                <strong>{% if diet %}Dietary restriction: {{ diet }}.{% else %}No dietary restriction.{% endif %}</strong>
             </p>
         </div>
     {% endif %}
