--- a/meals/templates/meal_add.html
+++ b/meals/templates/meal_add.html
@@ -28,6 +28,9 @@
 	    <label class="control-label" for="meal_times">Times a hacker can eat</label>
 	    <input type="number" class="form-control" name="meal_times" value="{{ meal.times }}" step="1" min="1" />
 	</div>
+	<div class="form-group">
+	    <input type="checkbox" name="meal_opened" value="opened"> Active
+	</div>
         <input type="hidden" name="meal_id" value="{{ meal.id }}"/>
 	<button class="btn btn-success" name="update">Add meal</button>
     </form>
