save state to LS

--- a/judging/templates/include/room_presentations.html
+++ b/judging/templates/include/room_presentations.html
@@ -1,4 +1,4 @@
-<div>
+<div data-room-name="{{ room.name }}">
   <div class="judging-close-button">x</div>
   <h1>{{ room.name }}</h1>
   <h2>{{ room.challenge.name }}</h2>
