--- a/judging/static/css/presentations.css
+++ b/judging/static/css/presentations.css
@@ -73,3 +73,10 @@
 	padding:15px 5px;
 	margin:0;
 }
+
+#reset-btn{
+	position:absolute;
+	margin:-20px 0 0 0;
+	text-align: center;
+	width:100%;
+}
