--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -90,6 +90,9 @@
                         {% if request.user.is_admin %}
                             <li class="{% if request.resolver_match.url_name == "admin:index" %}active{% endif %}"><a
                                     href="{% url 'admin:index' %}">Admin</a></li>
+                        {% elif request.user.email_verified and not request.user.is_organizer and not request.user.is_volunteer %}
+                            <li class="{% if 'dashboard' in request.build_absolute_uri %}active{% endif %}">
+                                <a href="{% url 'dashboard' %}">Dashboard</a></li>
                         {% endif %}
                         {% if request.user.email_verified %}
                             {% if request.user.is_organizer %}
