--- a/baggage/templates/baggage_map.html
+++ b/baggage/templates/baggage_map.html
@@ -15,6 +15,14 @@
             }
         {% endfor %}
     </style>
+    
+    {% for bag in bags %}
+        <script>
+            $(document).ready(function(){
+                document.getElementById('baggage-cell-{{ bag.room }}-{{ bag.position }}').innerHTML = "<a href=\"{% url 'baggage_detail' bag.bid %}\">{{ bag.position }}</a>";
+            });
+        </script>
+    {% endfor %}
 {% endblock %}
 
 {% block head_title %}Baggage map{% endblock %}
@@ -23,7 +31,7 @@
     <div class="tab">
         <div style="float: right;">
             {% for room in rooms %}
-                <button class="tablinks btn btn-info" onclick="openCity(event, '{{ room }}')">{{ room }}</button>
+                <button class="tablinks btn btn-info" onclick="openRoom(event, '{{ room }}')">{{ room }}</button>
             {% endfor %}
         </div>
     </div>
@@ -48,7 +56,7 @@
     {% endfor %}
     
     <script>
-        function openCity(evt, tabName) {
+        function openRoom(evt, tabName) {
             var i, tabcontent, tablinks;
             
             tabcontent = document.getElementsByClassName("tabcontent");
@@ -67,12 +75,4 @@
         
         document.getElementsByClassName("tablinks")[0].click();
     </script>
-    
-    {% for bag in bags %}
-        <script>
-            $(document).ready(function(){
-                document.getElementById('baggage-cell-{{ bag.room }}-{{ bag.position }}').innerHTML = "<a href=\"{% url 'baggage_detail' bag.bid %}\">{{ bag.position }}</a>";
-            });
-        </script>
-    {% endfor %}
 {% endblock %}
