polish judging permissions and tabs
- any user can become a judge
- Judging tab points to Judge tab but if you're not
  a judge it redirects you to the presentation list
- show judging subtabs correctly

--- a/judging/templates/include/judging_tab.html
+++ b/judging/templates/include/judging_tab.html
@@ -1,5 +1,5 @@
 {% if request.user.is_organizer %}
 <li><a href="{% url 'import_projects' %}">Judging</a></li>
 {% else %}
-<li><a href="{% url 'project_list' %}">Judging</a></li>
+  <li><a href="{% url 'judge_projects' %}">Judging</a></li>
 {% endif %}
