--- a/applications/templates/include/application_form.html
+++ b/applications/templates/include/application_form.html
@@ -99,6 +99,14 @@
             });
             // Making projects look like required
             projects.parent().addClass('required');
+
+            var other_gender = $('#id_other_gender');
+            var gender = $('#id_gender');
+            conditional_field(other_gender, gender, function () {
+                return gender.val() === 'O';
+            });
+            // Making gender specification look like required
+            other_gender.parent().addClass('required');
         }
     )
 
