HK: Major and degree

--- a/applications/templates/include/application_form.html
+++ b/applications/templates/include/application_form.html
@@ -47,6 +47,7 @@
     $(document).ready(function () {
 
             make_field_typeahead('university', '{% static 'schools.json' %}');
+            make_field_typeahead('major', '{% static 'majors.json' %}');
             make_field_typeahead('degree', '{% static 'degrees.json' %}');
             $("#id_origin").typeahead({
                 minLength: 3,
