HK: Logo instead of text

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -82,7 +82,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand white-text" href="/">{{ h_app_name }}</a>
+                <a class="navbar-brand hk-image" href="/">
+                    <img class="hk-image" src="{% static 'img/logo.svg' %}" alt="{{ h_app_name }}" height="50" width="200">
+                </a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
